<resources>
    <string name="tfe_od_app_name" translation_description="Smart Wildlife Capture [CHAR_LIMIT=40]">Smart Wildlife Capture</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>

    <string name="enter_timer_name_optional">Enter Timer Name (Optional)</string>
    <string name="repeat">Repeat</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_000">000</string>
    <string name="timer_name">Timer Name</string>
    <string name="smiley_face">Smiley Face</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="sound">Sound</string>
    <string name="statistics">Statistics</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="setting">Setting</string>
    <string name="custom_timer">Custom Timer</string>
    <string name="Notification">Notification</string>
    <string name="app_name">Smart Wildlife Capture</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="share">Share</string>
    <string name="invitation_title">Send Invitation for Smart Animal AutoCapture Application</string>
    <string name="invitation_message">Try out Smart Wildlife AutoCapture, just setup your phone and let the phone take pictures automatically using machine learning technology</string>
    <string name="invitation_deep_link">https://play.google.com/store/apps/details?id=com.armcomptech.smartanimaldetector</string>
    <string name="invitation_cta">Download Application</string>
</resources>
