<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/ad_button"
        android:icon="@drawable/ic_tag_faces_white_24dp"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/smiley_face" />

    <item
        android:id="@+id/check_heartbeat"
        android:checkable="true"
        android:enabled="true"
        android:title="@string/heartbeat"
        android:tooltipText="@string/app_name"
        android:checked="true"
        app:showAsAction="never"
        tools:targetApi="o" />

    <item
        android:id="@+id/check_sound"
        android:checkable="true"
        android:enabled="true"
        android:title="@string/sound"
        android:tooltipText="@string/app_name"
        android:checked="true"
        app:showAsAction="never"
        tools:targetApi="o" />

    <item
        android:id="@+id/statistics_activity"
        android:title="@string/statistics"
        android:icon="@drawable/ic_data_usage_black"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/privacy_policy"
        android:title="@string/privacy_policy"
        android:icon="@drawable/ic_lock_black"
        app:showAsAction="never"
        android:visible="false" />

    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings_black"
        app:showAsAction="never"
        android:visible="false"/>

</menu>